<resources>
    <string name="app_name">Cavaro</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_bt_welcome">Next</string>
    <string name="get_started_bt_welcome">Get Started</string>
    <string name="title_splash_tv">Title</string>
    <string name="text_splash_tv">Text</string>
    <string name="sign_up_tv_register">Sign Up</string>
    <string name="create_account_tv_register">Create Account</string>
    <string name="name_hint_register">Name</string>
    <string name="email_hint_register">Email</string>
    <string name="password_hint__register">Password</string>
    <string name="sign_up_bt_register">Sign Up</string>
    <string name="already_have_an_account_tv_register">Already have an account ?</string>
    <string name="sign_in_tv_register">Sign in</string>
    <string name="login_here_tv_login">Login here</string>
    <string name="welcome_back_you_ve_been_missed_tv_login">Welcome back you`ve been missed!</string>
    <string name="email_hint_login">Email</string>
    <string name="password_hint_login">Password</string>
    <string name="forget_your_password_tv_login">Forget your password ?</string>
    <string name="sign_in_bt_login">Sign in</string>
    <string name="create_new_account_tv_login">Create new account</string>
    <string name="add_new_item_add_screen">Add New Item</string>
    <string name="name_add_screen">Name</string>
    <string name="price_add_screen">Price</string>
    <string name="calories_add_screen">Calories</string>
    <string name="description_add_screen">Description</string>
    <string name="add_item_add_screen">Add Item</string>
    <string name="discover_your_dream_job_here_auth_screen">Discover Delicious Food Here</string>
    <string name="discover_your_dream_job_here_discover_your_dream_job_herediscover_auth_screen">Browse our menu and enjoy a unique dining experience with just a few taps</string>
    <string name="login_auth_screen">Login</string>
    <string name="register_auth_screen">Register</string>
    <string name="name_item_details_screen">Name</string>
    <string name="categoryname_item_details_screen">CategoryName</string>
    <string name="calories_item_details_screen">🔥 Calories</string>
    <string name="price_item_details_screen">$ 20.00</string>
    <string name="details_item_details_screen">Details</string>
    <string name="description_item_details_screen">Description</string>
    <string name="quantity_item_details_screen">0</string>
    <string name="add_cart_item_details_screen">Add Cart</string>
    <string name="forget_password_forget_password_screen">Forget Password</string>
    <string name="new_password_forget_password_screen">New Password</string>
    <string name="reset_password_forget_password_screen">Reset Password</string>
    <string name="update_item_tv_update_item_screen">Update Item</string>
    <string name="new_name_et_update_item_screen">New name</string>
    <string name="new_price_et_update_item_screen">New price</string>
    <string name="new_calories_et_update_item_screen">New calories</string>
    <string name="description_et_update_item_screen">Description</string>
    <string name="update_item_bt_update_item_screen">Update Item</string>
    <string name="edit_or_delete_tv_bottom_dialog">Edit Or Delete</string>
    <string name="edit_tv_bottom_dialog">Edit</string>
    <string name="delete_tv_bottom_dialog">Delete</string>
    <string name="my_cart_tv_cart_screen">My Cart</string>
    <string name="favorite_food_favorite_screen">Favorite Food</string>
    <string name="good_morning_tv_home_screen">Good Morning 👋</string>
    <string name="restaurant_foods_hint_et_home_screen">Restaurant Foods...</string>
    <string name="explore_menuitem_tv_home_screen">Explore MenuItem</string>
    <string name="all_categories_home_screen">All Categories</string>
    <string name="total_price_tv_home_screen">Total Price</string>
    <string name="total_price_home_screen">$5000</string>
    <string name="checkout_bt_home_screen">Checkout</string>
    <string name="pizza_marg_tv_item_cart">Pizza Marg</string>
    <string name="calories_tv_item_cart">🔥 88 Calories</string>
    <string name="quantity_item_cart">3</string>
    <string name="dollar_item_cart">$</string>
    <string name="price_item_cart">10.00</string>
    <string name="burger_tv_item_category">Burger</string>
    <string name="pizza_marg_tv_item_favorite">Pizza Marg</string>
    <string name="calories_tv_item_favorite">🔥 88 Calories</string>
    <string name="dollar_tv_item_favorite">$</string>
    <string name="price_tv_item_favorite">10.00</string>
    <string name="name_tv_item_customer_h">Pizza Marg</string>
    <string name="calories_tv_item_customer_h">🔥 88 Calories</string>
    <string name="price_tv_item_customer_h">$ 10.00</string>
    <string name="name_tv_item_owner">Pizza Marg</string>
    <string name="calories_tv_item_owner">🔥 88 Calories</string>
    <string name="price_tv_item_owner">$ 10.00</string>
    <string name="name_tv_item_customer_v">Pizza Marg</string>
    <string name="calories_tv_item_customer_v">🔥 88 Calories</string>
    <string name="price_tv_item_customer_v">$ 10.00</string>
    <string name="order_tv_item_bill">Order #</string>
    <string name="date_tv_item_bill">2 / 8 / 2025</string>
    <string name="dollar_tv_item_bill">$</string>
    <string name="price_tv_item_bill">10.00</string>
    <string name="total_price_tv_item_bill">Total Price :</string>
    <string name="name_tv_menu_item_bill">Chicken</string>
    <string name="quantity_tv_menu_item_bill">2 ×</string>
    <string name="price_tv_menu_item_bill">30</string>
    <string name="total_price_tv_menu_item_bill">100.00</string>
    <string name="main_dishes">Main Dishes</string>
    <string name="starters">Starters</string>
    <string name="drinks">Drinks</string>
    <string name="desserts">Desserts</string>
    <string name="extras">Extras</string>
    <string name="all">All</string>
    <string name="live_order">Current Order</string>
    <string name="completed_order">Completed Orders</string>
    <string name="delicious_food">Delicious Food</string>
    <string name="enjoy_a_unique_and_tasty_dining_experience">Enjoy a unique and tasty dining experience</string>
    <string name="order_with_ease">Order with Ease</string>
    <string name="browse_the_menu_and_order_your_favorite_meal_in_just_a_few_steps">Browse the menu and order your favorite meal in just a few steps</string>
    <string name="let_s_eat">Let’s Eat!</string>
    <string name="explore_our_special_dishes_and_get_your_meal_fast">Explore our special dishes and get your meal fast</string>
    <string name="home_bottom_navigation_menu">Home</string>
    <string name="cart_bottom_navigation_menu">Cart</string>
    <string name="favorite_bottom_navigation_menu">Favorite</string>
    <string name="profile_bottom_navigation_menu">Profile</string>
    <string name="menu_bottom_navigation_menu_owner">Menu</string>
    <string name="profile_bottom_navigation_menu_owner">Profile</string>
    <string name="calories_item_customer">" Calories"</string>
    <string name="profile_tv_owner">Profile</string>
    <string name="email_tv_owner">admin123@gmail.com</string>
    <string name="edit_profile_tv_owner">Edit Profile</string>
    <string name="language_tv_owner">Language</string>
    <string name="dark_mood_tv_owner">Dark Mood</string>
    <string name="logout_tv_owner">Logout</string>
    <string name="english_us_tv_owner">English (US)</string>
    <string name="arabic_tv_owner">Arabic</string>
    <string name="my_orders_tv_customer">My Orders</string>
    <string name="update_data_tv_owner">Update Data</string>
    <string name="new_name_tv_owner">New name</string>
    <string name="new_email_tv_owner">New email</string>
    <string name="new_password_tv_owner">New Password</string>
    <string name="update_bt_owner">Update</string>
    <string name="logout_tv">Logout</string>
    <string name="are_you_sure_you_want_to_logout_tv">Are you sure you want to logout ?</string>
    <string name="cancel_bt">Cancel</string>
    <string name="yes_logout_bt">Yes, logout</string>
    <string name="update_successful_user">Update Successful</string>
    <string name="your_account_user">Your account data has been updated successfully!</string>
    <string name="ok_user">OK</string>
    <string name="fill_the_data_user">Fill The Data</string>
    <string name="invalid_email_format_user">Invalid email format</string>
    <string name="password_too_short_user">Password too short</string>
    <string name="email_not_correct_user">Email Not Correct</string>
    <string name="password_not_correct_user">Password Not Correct</string>
    <string name="registration_successful_user">Registration successful</string>
    <string name="success_user">Success</string>
    <string name="registration_failed_user">Registration Failed</string>
    <string name="user_already_exists_user">User already exists</string>
    <string name="reset_password_successfully_user">Reset Password Successfully</string>
    <string name="order_completed">Order Completed</string>
    <string name="your_order_successfully">Your order has been completed successfully!</string>
    <string name="the_cart_is_empty">The Cart is Empty</string>
    <string name="your_order_is_completed">Your Order is Completed</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="the_product_has_been_successfully_added_to_your_cart">The product has been successfully added to your cart!</string>
    <string name="pls_add_quantity">Pls Add Quantity</string>
    <string name="cart_updated">Cart Updated</string>
    <string name="the_quantity_has_been_updated_to">"The quantity has been updated to "</string>
    <string name="item_added">Item Added</string>
    <string name="the_menu_item_has_been_successfully_added">The menu item has been successfully added!</string>
    <string name="delete_item">Delete Item</string>
    <string name="warning">Warning! If you delete this item, it will be removed from all orders and the entire system. Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="the_item_has_been_successfully_deleted_from_the_system">The item has been successfully deleted from the system.</string>
    <string name="cancel">Cancel</string>
    <string name="update_successful">Update Successful</string>
    <string name="your_item_data_has_been_updated_successfully">Your Item data has been updated successfully!</string>

</resources>