<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthScreens.LoginActivity">

    <ImageView
        android:id="@+id/arrowBackIv"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layoutDirection="ltr"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/signInTvLogin"
        style="@style/TitleTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/login_here_tv_login"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeTvLogin"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:lineHeight="30dp"
        android:text="@string/welcome_back_you_ve_been_missed_tv_login"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTvLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEtlLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorBackEt"
        android:hint="@string/email_hint_login"
        android:textColorHint="@color/colorHint"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTvLogin">

        <EditText
            android:id="@+id/emailEtLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEtlLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorBackEt"
        android:hint="@string/password_hint_login"
        android:textColorHint="@color/colorHint"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEtlLogin">

        <EditText
            android:id="@+id/passwordEtLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgetPassTvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:text="@string/forget_your_password_tv_login"
        android:textColor="@color/colorBlack"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEtlLogin" />

    <Button
        android:id="@+id/signInBtLogin"
        style="@style/ElevatedButtonStyle"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:text="@string/sign_in_bt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgetPassTvLogin" />

    <TextView
        android:id="@+id/createAccTvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:text="@string/create_new_account_tv_login"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInBtLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>