<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthScreens.AuthActivity">


    <ImageView
        android:id="@+id/helloIv"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:src="@drawable/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discoverTv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:lineHeight="55dp"
        android:text="@string/discover_your_dream_job_here_auth_screen"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helloIv" />

    <TextView
        android:id="@+id/textTv"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/discover_your_dream_job_here_discover_your_dream_job_herediscover_auth_screen"
        android:textAlignment="center"
        android:textColor="#4D4D4D"
        android:textSize="14sp"
        android:lineHeight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discoverTv" />

    <Button
        android:id="@+id/loginBt"
        style="@style/ElevatedButtonStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:padding="15dp"
        android:text="@string/login_auth_screen"
        app:layout_constraintEnd_toStartOf="@+id/registerBt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTv" />

    <Button
        android:id="@+id/registerBt"
        style="@style/ElevatedButtonStyleReg"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:padding="15dp"
        android:text="@string/register_auth_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loginBt"
        app:layout_constraintTop_toBottomOf="@id/textTv" />


</androidx.constraintlayout.widget.ConstraintLayout>