<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnerScreens.ChooseLanguageActivity">

    <ImageView
        android:id="@+id/arrowBackIv"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:layoutDirection="ltr"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/languageTv"
        style="@style/TitleTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/language_tv_owner"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/arrowBackIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/languageTg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/languageTv">

        <RadioButton
            android:id="@+id/englishRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english_us_tv_owner"
            android:textColor="@color/black"
            android:layoutDirection="ltr"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/arabicRb"
            android:layout_width="match_parent"
            android:layoutDirection="ltr"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:buttonTint="#FF9800"
            android:text="@string/arabic_tv_owner"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>